--- a/데이터분석_박혜린_2.ipynb
+++ b/데이터분석_박혜린_2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "id": "7684b3fe",
    "metadata": {},
    "outputs": [
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4591\n"
+      "3431\n"
      ]
     }
    ],
@@ -86,10 +86,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "id": "7362dd27",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -163,43 +163,43 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4585</th>\n",
-       "      <td>4585</td>\n",
+       "      <th>3425</th>\n",
+       "      <td>3425</td>\n",
        "      <td>2022.01.28.</td>\n",
        "      <td>경찰, 이별 통보에 '흉기 사진' 보낸 40대 불법 체류자 검거</td>\n",
        "      <td>https://www.ytn.co.kr/_ln/0103_202201281526301793</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4586</th>\n",
-       "      <td>4586</td>\n",
+       "      <th>3426</th>\n",
+       "      <td>3426</td>\n",
        "      <td>2022.01.13.</td>\n",
        "      <td>이별 통보한 여성에게 흉기 휘둘러 살해한 20대 검거</td>\n",
        "      <td>http://yna.kr/AKR20220113024800063?did=1195m</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4587</th>\n",
-       "      <td>4587</td>\n",
+       "      <th>3427</th>\n",
+       "      <td>3427</td>\n",
        "      <td>2022.01.10.</td>\n",
        "      <td>‘신변보호’ 피해자 주소 살해범에 넘긴 정보원은 구청 공무원</td>\n",
        "      <td>https://www.seoul.co.kr/news/newsView.php?id=2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4588</th>\n",
-       "      <td>4588</td>\n",
+       "      <th>3428</th>\n",
+       "      <td>3428</td>\n",
        "      <td>2022.01.13.</td>\n",
        "      <td>천안 원룸서 여자친구 살해 혐의 20대 남성 검거</td>\n",
        "      <td>https://news.kbs.co.kr/news/view.do?ncd=537214...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4589</th>\n",
-       "      <td>4589</td>\n",
+       "      <th>3429</th>\n",
+       "      <td>3429</td>\n",
        "      <td>2022.01.13.</td>\n",
        "      <td>\"헤어지자\"‥전 여자친구 살해한 20대 검거</td>\n",
        "      <td>https://imnews.imbc.com/replay/2022/nwdesk/art...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4590 rows × 4 columns</p>\n",
+       "<p>3430 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -210,11 +210,11 @@
        "3              3  2022.01.19.                  이별 통보한 전 여친 살해한 27세 조현진 신상공개   \n",
        "4              4  2022.01.29.  '악의 마음' 부유층 연쇄살인 발생에 유영철 재조명 '10개월 간 20명 살해'   \n",
        "...          ...          ...                                           ...   \n",
-       "4585        4585  2022.01.28.           경찰, 이별 통보에 '흉기 사진' 보낸 40대 불법 체류자 검거   \n",
-       "4586        4586  2022.01.13.                 이별 통보한 여성에게 흉기 휘둘러 살해한 20대 검거   \n",
-       "4587        4587  2022.01.10.             ‘신변보호’ 피해자 주소 살해범에 넘긴 정보원은 구청 공무원   \n",
-       "4588        4588  2022.01.13.                   천안 원룸서 여자친구 살해 혐의 20대 남성 검거   \n",
-       "4589        4589  2022.01.13.                      \"헤어지자\"‥전 여자친구 살해한 20대 검거   \n",
+       "3425        3425  2022.01.28.           경찰, 이별 통보에 '흉기 사진' 보낸 40대 불법 체류자 검거   \n",
+       "3426        3426  2022.01.13.                 이별 통보한 여성에게 흉기 휘둘러 살해한 20대 검거   \n",
+       "3427        3427  2022.01.10.             ‘신변보호’ 피해자 주소 살해범에 넘긴 정보원은 구청 공무원   \n",
+       "3428        3428  2022.01.13.                   천안 원룸서 여자친구 살해 혐의 20대 남성 검거   \n",
+       "3429        3429  2022.01.13.                      \"헤어지자\"‥전 여자친구 살해한 20대 검거   \n",
        "\n",
        "                                                    url  \n",
        "0     http://star.mt.co.kr/stview.php?no=20220129214...  \n",
@@ -223,16 +223,16 @@
        "3     http://news.kmib.co.kr/article/view.asp?arcid=...  \n",
        "4     http://www.gukjenews.com/news/articleView.html...  \n",
        "...                                                 ...  \n",
-       "4585  https://www.ytn.co.kr/_ln/0103_202201281526301793  \n",
-       "4586       http://yna.kr/AKR20220113024800063?did=1195m  \n",
-       "4587  https://www.seoul.co.kr/news/newsView.php?id=2...  \n",
-       "4588  https://news.kbs.co.kr/news/view.do?ncd=537214...  \n",
-       "4589  https://imnews.imbc.com/replay/2022/nwdesk/art...  \n",
+       "3425  https://www.ytn.co.kr/_ln/0103_202201281526301793  \n",
+       "3426       http://yna.kr/AKR20220113024800063?did=1195m  \n",
+       "3427  https://www.seoul.co.kr/news/newsView.php?id=2...  \n",
+       "3428  https://news.kbs.co.kr/news/view.do?ncd=537214...  \n",
+       "3429  https://imnews.imbc.com/replay/2022/nwdesk/art...  \n",
        "\n",
-       "[4590 rows x 4 columns]"
+       "[3430 rows x 4 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,145 +246,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "b939a1ab",
+   "execution_count": null,
+   "id": "e8bab34c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>date</th>\n",
-       "      <th>title</th>\n",
-       "      <th>url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2022.01.29.</td>\n",
-       "      <td>'악의 마음' 김남길X진선규 어쩌나..연쇄살인범 검거 난항 [★밤TView]</td>\n",
-       "      <td>http://star.mt.co.kr/stview.php?no=20220129214...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2022.01.27.</td>\n",
-       "      <td>차 타는 순간 흉기로 여성 위협…금품 빼앗은 강도 검거</td>\n",
-       "      <td>http://www.edaily.co.kr/news/newspath.asp?news...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2022.01.25.</td>\n",
-       "      <td>차량서 50대 여성 흉기에 찔려 숨진 채 발견…남편 살해 추정</td>\n",
-       "      <td>https://www.news1.kr/articles/?4565509</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2022.01.19.</td>\n",
-       "      <td>이별 통보한 전 여친 살해한 27세 조현진 신상공개</td>\n",
-       "      <td>http://news.kmib.co.kr/article/view.asp?arcid=...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2022.01.29.</td>\n",
-       "      <td>'악의 마음' 부유층 연쇄살인 발생에 유영철 재조명 '10개월 간 20명 살해'</td>\n",
-       "      <td>http://www.gukjenews.com/news/articleView.html...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>2022.01.28.</td>\n",
-       "      <td>경찰, 이별 통보에 '흉기 사진' 보낸 40대 불법 체류자 검거</td>\n",
-       "      <td>https://www.ytn.co.kr/_ln/0103_202201281526301793</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>2022.01.13.</td>\n",
-       "      <td>이별 통보한 여성에게 흉기 휘둘러 살해한 20대 검거</td>\n",
-       "      <td>http://yna.kr/AKR20220113024800063?did=1195m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>2022.01.10.</td>\n",
-       "      <td>‘신변보호’ 피해자 주소 살해범에 넘긴 정보원은 구청 공무원</td>\n",
-       "      <td>https://www.seoul.co.kr/news/newsView.php?id=2...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>2022.01.13.</td>\n",
-       "      <td>천안 원룸서 여자친구 살해 혐의 20대 남성 검거</td>\n",
-       "      <td>https://news.kbs.co.kr/news/view.do?ncd=537214...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>2022.01.13.</td>\n",
-       "      <td>\"헤어지자\"‥전 여자친구 살해한 20대 검거</td>\n",
-       "      <td>https://imnews.imbc.com/replay/2022/nwdesk/art...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0         date                                         title  \\\n",
-       "0           0  2022.01.29.    '악의 마음' 김남길X진선규 어쩌나..연쇄살인범 검거 난항 [★밤TView]   \n",
-       "1           1  2022.01.27.                차 타는 순간 흉기로 여성 위협…금품 빼앗은 강도 검거   \n",
-       "2           2  2022.01.25.            차량서 50대 여성 흉기에 찔려 숨진 채 발견…남편 살해 추정   \n",
-       "3           3  2022.01.19.                  이별 통보한 전 여친 살해한 27세 조현진 신상공개   \n",
-       "4           4  2022.01.29.  '악의 마음' 부유층 연쇄살인 발생에 유영철 재조명 '10개월 간 20명 살해'   \n",
-       "5           5  2022.01.28.           경찰, 이별 통보에 '흉기 사진' 보낸 40대 불법 체류자 검거   \n",
-       "6           6  2022.01.13.                 이별 통보한 여성에게 흉기 휘둘러 살해한 20대 검거   \n",
-       "7           7  2022.01.10.             ‘신변보호’ 피해자 주소 살해범에 넘긴 정보원은 구청 공무원   \n",
-       "8           8  2022.01.13.                   천안 원룸서 여자친구 살해 혐의 20대 남성 검거   \n",
-       "9           9  2022.01.13.                      \"헤어지자\"‥전 여자친구 살해한 20대 검거   \n",
-       "\n",
-       "                                                 url  \n",
-       "0  http://star.mt.co.kr/stview.php?no=20220129214...  \n",
-       "1  http://www.edaily.co.kr/news/newspath.asp?news...  \n",
-       "2             https://www.news1.kr/articles/?4565509  \n",
-       "3  http://news.kmib.co.kr/article/view.asp?arcid=...  \n",
-       "4  http://www.gukjenews.com/news/articleView.html...  \n",
-       "5  https://www.ytn.co.kr/_ln/0103_202201281526301793  \n",
-       "6       http://yna.kr/AKR20220113024800063?did=1195m  \n",
-       "7  https://www.seoul.co.kr/news/newsView.php?id=2...  \n",
-       "8  https://news.kbs.co.kr/news/view.do?ncd=537214...  \n",
-       "9  https://imnews.imbc.com/replay/2022/nwdesk/art...  "
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "news_df_1.drop_duplicates(['title'])"
+    "#인덱스 칼럼 생성되었을 때 제거\n",
+    "#news_df_1 = news_df_1.drop(['Unnamed: 0'], axis=1, inplace=True)"
    ]
   },
   {
@@ -622,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8a51efd1",
+   "id": "8fae0170",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1c9b55ba",
+   "id": "b8fd3842",
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2c85a1b1",
+   "id": "ec552c02",
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "59729372",
+   "id": "56216ce5",
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "58980b78",
+   "id": "e625cb3c",
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3c01e319",
+   "id": "9c981d74",
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d172f92e",
+   "id": "27606b47",
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1272,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4fc3efd7",
+   "id": "4f5968e0",
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1430,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d978cef6",
+   "id": "0398c0ac",
    "metadata": {},
    "outputs": [
     {
@@ -1717,7 +1585,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "469dbabc",
+   "id": "dd1dc7c9",
    "metadata": {},
    "outputs": [
     {
@@ -1860,7 +1728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4afc2099",
+   "id": "6e558e17",
    "metadata": {},
    "outputs": [],
    "source": []
