--- a/데이터분석_진청아_v8_혜린.ipynb
+++ b/데이터분석_진청아_v8_혜린.ipynb
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "9ec16b7b",
+   "id": "173c51f1",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "ef62b68e",
+   "id": "0d058635",
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "923e56a1",
+   "id": "f512da55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0514e65",
+   "id": "f53a75a3",
    "metadata": {},
    "source": [
     "#### final_df 로 저장!! "
@@ -6894,7 +6894,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "ac934819",
+   "id": "b857a24a",
    "metadata": {},
    "outputs": [
     {
@@ -7956,6 +7956,235 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "f6d48aaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>title</th>\n",
+       "      <th>url</th>\n",
+       "      <th>처벌</th>\n",
+       "      <th>범죄_키워드</th>\n",
+       "      <th>가해자_나이대</th>\n",
+       "      <th>피해자</th>\n",
+       "      <th>가해자</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022.01.26.</td>\n",
+       "      <td>결혼 1달 만에 아내 폭행·살해한 50대에 징역 30년 구형</td>\n",
+       "      <td>http://www.newsis.com/view/?id=NISX20220126_0001738203&amp;cID=10807&amp;pID=10800</td>\n",
+       "      <td>징역 30년</td>\n",
+       "      <td>결혼 아내 폭행 살해 징역 구형</td>\n",
+       "      <td>50</td>\n",
+       "      <td>아내</td>\n",
+       "      <td>남편</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022.01.29.</td>\n",
+       "      <td>술주정·폭언·욕설 시달려 남편 살해한 60대 아내, '징역 4년'</td>\n",
+       "      <td>https://www.news1.kr/articles/?4570429</td>\n",
+       "      <td>징역 4년</td>\n",
+       "      <td>주정 폭언 욕설 남편 살해 아내 징역</td>\n",
+       "      <td>60</td>\n",
+       "      <td>남편</td>\n",
+       "      <td>아내</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022.01.13.</td>\n",
+       "      <td>아내 용서에도…흉기로 살해한 40대 '징역 25년' 구형</td>\n",
+       "      <td>https://www.nocutnews.co.kr/news/5689758</td>\n",
+       "      <td>징역 25년</td>\n",
+       "      <td>아내 용서 흉기 살해 징역 구형</td>\n",
+       "      <td>40</td>\n",
+       "      <td>아내</td>\n",
+       "      <td>남편</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022.01.26.</td>\n",
+       "      <td>이혼 소송 중 장검으로 아내 살해한 40대에 무기징역 구형</td>\n",
+       "      <td>https://view.asiae.co.kr/article/2022012615490412989</td>\n",
+       "      <td>무기징역</td>\n",
+       "      <td>이혼 소송 장검 아내 살해 무기징역 구형</td>\n",
+       "      <td>40</td>\n",
+       "      <td>아내</td>\n",
+       "      <td>남편</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022.01.24.</td>\n",
+       "      <td>“왜 수익금 안 줘”…동업 친구 살해하려 한 20대 3명 징역형</td>\n",
+       "      <td>https://www.seoul.co.kr/news/newsView.php?id=20220124500042&amp;wlog_tag3=naver</td>\n",
+       "      <td></td>\n",
+       "      <td>수익금 동업 친구 살해 징역형</td>\n",
+       "      <td>20</td>\n",
+       "      <td>친구</td>\n",
+       "      <td>친구</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>568</th>\n",
+       "      <td>2021.12.08.</td>\n",
+       "      <td>'연락처 지웠다고 남자친구 살해?'… 1심 무기징역 30대 여성 \"선처 호소\"</td>\n",
+       "      <td>http://moneys.mt.co.kr/news/mwView.php?no=2021120814128057224</td>\n",
+       "      <td>무기징역</td>\n",
+       "      <td>연락처 남자친구 살해 무기징역 여성 선처 호소</td>\n",
+       "      <td>30</td>\n",
+       "      <td>남자친구</td>\n",
+       "      <td>여성</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>569</th>\n",
+       "      <td>2021.12.03.</td>\n",
+       "      <td>아내 수차례 흉기로 찔러 살해하려 한 50대 징역 10년 선고</td>\n",
+       "      <td>https://www.nocutnews.co.kr/news/5668066</td>\n",
+       "      <td>징역 10년</td>\n",
+       "      <td>아내 차례 흉기 살해 징역 선고</td>\n",
+       "      <td>50</td>\n",
+       "      <td>아내</td>\n",
+       "      <td>남편</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>570</th>\n",
+       "      <td>2021.12.16.</td>\n",
+       "      <td>집에 늦게 들어온다고 했다고…아내 흉기로 살해한 40대</td>\n",
+       "      <td>https://www.nocutnews.co.kr/news/5674769</td>\n",
+       "      <td></td>\n",
+       "      <td>아내 흉기 살해</td>\n",
+       "      <td>40</td>\n",
+       "      <td>아내</td>\n",
+       "      <td>남편</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>571</th>\n",
+       "      <td>2021.12.15.</td>\n",
+       "      <td>[사건·사고24시] ‘세 모녀 살해’ 김태현 오늘 항소심 첫 재판·“왜 내 아내 또 만나” 내연남 때려 숨지게 한 40대 外</td>\n",
+       "      <td>https://www.etoday.co.kr/news/view/2087165</td>\n",
+       "      <td></td>\n",
+       "      <td>사건 사고 모녀 살해 김태현 오늘 항소심 재판 아내 연남</td>\n",
+       "      <td>40</td>\n",
+       "      <td>남편</td>\n",
+       "      <td>아내</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>572</th>\n",
+       "      <td>2021.12.08.</td>\n",
+       "      <td>지인과 공범 살해한 50대, 성범죄·살인 감형받아 3년 전 출소</td>\n",
+       "      <td>https://www.chosun.com/national/national_general/2021/12/08/PTLSKCWLV5F6XNAUCGA3SGI4AE/?utm_source=naver&amp;utm_medium=referral&amp;utm_campaign=naver-news</td>\n",
+       "      <td></td>\n",
+       "      <td>지인 공범 살해 성범죄 살인 감형</td>\n",
+       "      <td>50</td>\n",
+       "      <td>지인</td>\n",
+       "      <td>지인</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>573 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date  \\\n",
+       "0    2022.01.26.   \n",
+       "1    2022.01.29.   \n",
+       "2    2022.01.13.   \n",
+       "3    2022.01.26.   \n",
+       "4    2022.01.24.   \n",
+       "..           ...   \n",
+       "568  2021.12.08.   \n",
+       "569  2021.12.03.   \n",
+       "570  2021.12.16.   \n",
+       "571  2021.12.15.   \n",
+       "572  2021.12.08.   \n",
+       "\n",
+       "                                                                     title  \\\n",
+       "0                                        결혼 1달 만에 아내 폭행·살해한 50대에 징역 30년 구형   \n",
+       "1                                     술주정·폭언·욕설 시달려 남편 살해한 60대 아내, '징역 4년'   \n",
+       "2                                          아내 용서에도…흉기로 살해한 40대 '징역 25년' 구형   \n",
+       "3                                         이혼 소송 중 장검으로 아내 살해한 40대에 무기징역 구형   \n",
+       "4                                      “왜 수익금 안 줘”…동업 친구 살해하려 한 20대 3명 징역형   \n",
+       "..                                                                     ...   \n",
+       "568                            '연락처 지웠다고 남자친구 살해?'… 1심 무기징역 30대 여성 \"선처 호소\"   \n",
+       "569                                     아내 수차례 흉기로 찔러 살해하려 한 50대 징역 10년 선고   \n",
+       "570                                         집에 늦게 들어온다고 했다고…아내 흉기로 살해한 40대   \n",
+       "571  [사건·사고24시] ‘세 모녀 살해’ 김태현 오늘 항소심 첫 재판·“왜 내 아내 또 만나” 내연남 때려 숨지게 한 40대 外   \n",
+       "572                                    지인과 공범 살해한 50대, 성범죄·살인 감형받아 3년 전 출소   \n",
+       "\n",
+       "                                                                                                                                                      url  \\\n",
+       "0                                                                              http://www.newsis.com/view/?id=NISX20220126_0001738203&cID=10807&pID=10800   \n",
+       "1                                                                                                                  https://www.news1.kr/articles/?4570429   \n",
+       "2                                                                                                                https://www.nocutnews.co.kr/news/5689758   \n",
+       "3                                                                                                    https://view.asiae.co.kr/article/2022012615490412989   \n",
+       "4                                                                             https://www.seoul.co.kr/news/newsView.php?id=20220124500042&wlog_tag3=naver   \n",
+       "..                                                                                                                                                    ...   \n",
+       "568                                                                                         http://moneys.mt.co.kr/news/mwView.php?no=2021120814128057224   \n",
+       "569                                                                                                              https://www.nocutnews.co.kr/news/5668066   \n",
+       "570                                                                                                              https://www.nocutnews.co.kr/news/5674769   \n",
+       "571                                                                                                            https://www.etoday.co.kr/news/view/2087165   \n",
+       "572  https://www.chosun.com/national/national_general/2021/12/08/PTLSKCWLV5F6XNAUCGA3SGI4AE/?utm_source=naver&utm_medium=referral&utm_campaign=naver-news   \n",
+       "\n",
+       "         처벌                           범죄_키워드 가해자_나이대   피해자 가해자  \n",
+       "0    징역 30년                결혼 아내 폭행 살해 징역 구형      50    아내  남편  \n",
+       "1     징역 4년             주정 폭언 욕설 남편 살해 아내 징역      60    남편  아내  \n",
+       "2    징역 25년                아내 용서 흉기 살해 징역 구형      40    아내  남편  \n",
+       "3      무기징역           이혼 소송 장검 아내 살해 무기징역 구형      40    아내  남편  \n",
+       "4                           수익금 동업 친구 살해 징역형      20    친구  친구  \n",
+       "..      ...                              ...     ...   ...  ..  \n",
+       "568    무기징역        연락처 남자친구 살해 무기징역 여성 선처 호소      30  남자친구  여성  \n",
+       "569  징역 10년                아내 차례 흉기 살해 징역 선고      50    아내  남편  \n",
+       "570                                 아내 흉기 살해      40    아내  남편  \n",
+       "571          사건 사고 모녀 살해 김태현 오늘 항소심 재판 아내 연남      40    남편  아내  \n",
+       "572                       지인 공범 살해 성범죄 살인 감형      50    지인  지인  \n",
+       "\n",
+       "[573 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocessed_df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5301c335",
    "metadata": {},
@@ -8080,7 +8309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b36f43a5",
+   "id": "55db51cf",
    "metadata": {},
    "outputs": [],
    "source": []
