--- a/데이터분석_박혜린_3.ipynb
+++ b/데이터분석_박혜린_3.ipynb
@@ -56,8 +56,9 @@
     "options.add_experimental_option(\"excludeSwitches\", [\"enable-automation\"])\n",
     "options.add_experimental_option(\"useAutomationExtension\", False)\n",
     "\n",
-    "\n",
+    "# 빈 데이터 프레임 생성\n",
     "news_df = pd.DataFrame()\n",
+    "\n",
     "\n",
     "while True:\n",
     "    try:\n",
@@ -65,22 +66,22 @@
     "        url = 'https://search.naver.com/search.naver?where=news&sm=tab_pge&query=%EC%82%B4%ED%95%B4%20%EC%A7%95%EC%97%AD&sort=0&photo=0&field=0&pd=3&ds=2022.01.01&de=2022.01.31&cluster_rank=26&mynews=0&office_type=0&office_section_code=0&news_office_checked=&nso=so:r,p:from20220101to20220131,a:all&'\n",
     "        headers = {'User-Agent' : 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/103.0.0.0 Safari/537.36'}\n",
     "\n",
-    "       \n",
-    "        \n",
+    "        # 페이지 2, 3, 4... 페이지로 넘기기 위해 params 이용\n",
     "        for i in range(0, 100):\n",
     "            response = requests.get(url, headers=headers, params = {'start' : 1+10*i})\n",
     "            soup = BeautifulSoup(response.text, 'lxml')\n",
-    "\n",
-    "\n",
+    "        \n",
+    "            # 태그로 텍스트 찾은 후 데이터 프레임에 넣어줌\n",
     "            news_title = [title['title'] for title in soup.find_all('a', attrs={'class':'news_tit'})]\n",
     "            news_url = [url['href'] for url in soup.find_all('a',attrs={'class':'news_tit'})]\n",
     "            dates = [date.get_text() for date in soup.find_all('span', attrs={'class':'info'})]\n",
-    "\n",
+    "          \n",
+    "        \n",
     "            news_date = []\n",
     "            for date in dates:\n",
     "                if re.search(r'\\d+.\\d+.\\d+',date) !=None:\n",
     "                    news_date.append(date)\n",
-    "\n",
+    "        \n",
     "            new_df = set(news_title)        \n",
     "\n",
     "            df = pd.DataFrame({'date':news_date,'title':news_title, 'url':news_url})\n",
@@ -7836,7 +7837,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
